// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-xoew8d-0 dsvLMx"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-xoew8d-1 hWbTds"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  <label
    className="Label-sc-1ny5bqy-0 bvIVUH"
    htmlFor="dropdown"
  >
     
    Text label
     
  </label>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-xoew8d-0 dsvLMx"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-xoew8d-1 hWbTds"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-xoew8d-0 dsvLMx"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-xoew8d-1 hWbTds"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  <div
    className="ErrorMessage-sc-19jcdrm-0 iRUhLB"
  >
    Error message
  </div>
</div>
`;

exports[`Input component  with items should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-xoew8d-0 dsvLMx"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-xoew8d-1 hWbTds"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;
